# auto_work_publishment_for_wechat_article

./: .gitignore  README.md  config.ini  pyproject.toml
data/input/: 为什么情绪化容易让人变傻？.md
src/: main.py
src/api/: base_client.py
src/api/deepseek/: deepseek_api.py
src/api/openai/: openai_api.py
src/api/wechat/: client.py
src/core/: article_model.py  settings.py
src/parsing/: md_parser.py
src/templates/: wechat_article.html  wechat_style.css
src/utils/: logger.py
tests/: test_main.py
tests/api/: test_base_client.py
tests/api/deepseek/: test_deepseek_api.py
tests/api/openai/: test_openai_api.py
tests/api/wechat/: test_client.py
tests/core/: test_article_model.py  test_settings.py
tests/parsing/: test_md_parser.py
tests/utils/: test_logger.py
